# hash-transformer

./: .gitignore  README.md  binary-token-memory-design.md  design.md  stage0_simhash.py  stage1_student.py  stage1b_readout.py  stage2_readout.py  stage3_semantic.py  stage4_combined.py  token_memory.py  train_lsh.py  train_s3.py
results/: stage0_report.md  stage1_report.md  stage1b_report.md  stage3_report.md  stage4_report.md  token_memory_bitops_report.md
rust-trainer/: Cargo.toml
rust-trainer/src/: main.rs
